; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Port/extr_fman_port.c_fman_port_set_bpool_counter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/ncsw/Peripherals/FM/Port/extr_fman_port.c_fman_port_set_bpool_counter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fman_port = type { i32, i64, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@FMAN_PORT_MAX_EXT_POOLS_NUM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fman_port_set_bpool_counter(%struct.fman_port* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.fman_port*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.fman_port* %0, %struct.fman_port** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.fman_port*, %struct.fman_port** %4, align 8
  %9 = getelementptr inbounds %struct.fman_port, %struct.fman_port* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  switch i32 %10, label %12 [
    i32 129, label %11
    i32 128, label %11
  ]

11:                                               ; preds = %3, %3
  br label %13

12:                                               ; preds = %3
  br label %38

13:                                               ; preds = %11
  %14 = load %struct.fman_port*, %struct.fman_port** %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = call i64 @fman_port_find_bpool(%struct.fman_port* %14, i64 %15)
  store i64 %16, i64* %7, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load %struct.fman_port*, %struct.fman_port** %4, align 8
  %19 = getelementptr inbounds %struct.fman_port, %struct.fman_port* %18, i32 0, i32 1
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %17, %20
  br i1 %21, label %26, label %22

22:                                               ; preds = %13
  %23 = load i64, i64* %7, align 8
  %24 = load i64, i64* @FMAN_PORT_MAX_EXT_POOLS_NUM, align 8
  %25 = icmp eq i64 %23, %24
  br i1 %25, label %26, label %27

26:                                               ; preds = %22, %13
  br label %38

27:                                               ; preds = %22
  %28 = load i32, i32* %6, align 4
  %29 = load %struct.fman_port*, %struct.fman_port** %4, align 8
  %30 = getelementptr inbounds %struct.fman_port, %struct.fman_port* %29, i32 0, i32 2
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = load i64, i64* %7, align 8
  %36 = getelementptr inbounds i32, i32* %34, i64 %35
  %37 = call i32 @iowrite32be(i32 %28, i32* %36)
  br label %38

38:                                               ; preds = %27, %26, %12
  ret void
}

declare dso_local i64 @fman_port_find_bpool(%struct.fman_port*, i64) #1

declare dso_local i32 @iowrite32be(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
